# gmod-gmcurl

./: CMakeLists.txt  LICENSE  README.md  Vagrantfile  build.sh  dist.sh  premake5.lua
.github/workflows/: commit.yml  version-tag.yml
examples/: simple.lua
src/: CMakeLists.txt  main.cpp
